# Pdf

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
data/: README.md
src/: __init__.py  cli.py
src/adapters/: __init__.py  fastapi_adapter.py  independent_quality_evaluator.py  local_storage_adapter.py  mistral_text_extractor.py  pdf_processor_factory.py  pdfplumber_adapter.py  pymupdf_adapter.py  pypdfium2_adapter.py  quality_evaluator.py  s3_storage_adapter.py  tesseract_text_extractor.py
src/application/: dependency_container.py  pdf_obfuscation_app.py  pdf_processor_factory.py
src/domain/: entities.py  exceptions.py  quality_annotation_schema.py  quality_evaluation_service.py  services.py
src/domain/services/: __init__.py  configuration_service.py  document_obfuscation_service.py  error_handler.py  quality_evaluation_service.py
src/ports/: __init__.py  file_storage_port.py  pdf_processor_factory_port.py  pdf_processor_port.py  quality_evaluator_port.py  text_extractor_port.py
src/use_cases/: evaluate_obfuscation_quality.py  obfuscate_document.py
tests/: conftest.py
tests/fixtures/: test_real_pdf.py
tests/integration/: test_fastapi.py
tests/unit/: test_fastapi_adapter.py  test_local_storage_adapter.py  test_pdfplumber_adapter.py  test_pymupdf_adapter.py  test_pypdfium2_adapter.py  test_s3_storage_adapter.py
