[project]
name = "pdf-obfuscator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PDF Obfuscation Service", email = "contact@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "fastapi>=0.116.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "numpy>=2.3.1",
    "pypdfium2>=4.30.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "mistralai>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
pdf-obfuscator = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
